# cryptocurrency-auto-trading-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
gui/CryptoTraderGUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: DataFetcher.hpp  Logger.hpp  StrategyEngine.hpp  TradeSimulator.hpp
src/: DataFetcher.cpp  Logger.cpp  StrategyEngine.cpp  TradeSimulator.cpp  main.cpp  test.cpp
